# ros_classloader_basics

./: README.md
bilderpkg/: CMakeLists.txt  README.md  package.xml
bilderpkg/include/ros_Classloader_Test/: Bild.h  Jpeg.h  Png.h
bilderpkg/src/: Jpeg.cpp  Png.cpp
classloader_ext_test/: CMakeLists.txt  README.md  package.xml
classloader_ext_test/src/: printBild.cpp  sendBild.cpp
